# LiftX

./: .deepsource.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  data.db  docker-compose.yml  jsconfig.json  package-lock.json  package.json  postcss.config.cjs  recipe.json  rollup.config.js  rustfmt.toml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/workflows/: codecov.yml
client/: App.svelte  Footer.svelte  Nav.svelte  app.css  app.html
client/Components/: AuthBox.svelte  Exercise.svelte  ExerciseView.svelte  LoggedInAlready.svelte  SetEntryForm.svelte  TinyGraph.svelte  ToggleSwitch.svelte  exercise.js  json_store.js  time.js
client/lib/: AuthBox.svelte  Error.svelte  Exercise.svelte  ExerciseGraph.svelte  LoggedInAlready.svelte  Nav.svelte  SetEntryForm.svelte  WorkoutRawView.svelte  WorkoutView.svelte  datatable.svelte  json_store.js  util.js
client/pages/: Frontpage.svelte  Home.svelte  Login.svelte  Register.svelte  Settings.svelte  Signup.svelte  WorkoutNew.svelte  WorkoutView.svelte
client/routes/: +layout.svelte  +page.svelte  WorkoutNew.svelte  WorkoutView.svelte  __layout.svelte  home.svelte  index.svelte  login.svelte  register.svelte  settings.svelte
client/routes/WorkoutNew/: +page.svelte
client/routes/WorkoutView/: +page.svelte
client/routes/home/: +page.svelte
client/routes/register/: +page.svelte
client/routes/settings/: +page.svelte
public/: index.html
rocket_auth/: Cargo.toml  README.md
rocket_auth/src/: cookies.rs  error.rs  lib.rs  prelude.rs
rocket_auth/src/db/: mod.rs
rocket_auth/src/db/mysql/: mod.rs  sql.rs
rocket_auth/src/db/skytable/: mod.rs
rocket_auth/src/db/sqlite/: mod.rs  sql.rs
rocket_auth/src/forms/: mod.rs
rocket_auth/src/session/: mod.rs
rocket_auth/src/session/default/: mod.rs
rocket_auth/src/user/: auth.rs  mod.rs  user_impl.rs  users.rs
src/: api.rs  cache.rs  database.rs  equipment.rs  error.rs  exercises.rs  graph.rs  handlers.rs  main.rs  muscles.rs  templates.rs  tests.rs  util.rs  weight.rs  workouts.rs
static/: status.css  status.scss  workout_view.css  workout_view.css.map  workout_view.scss  workoutview.css
sync_db_pools/codegen/src/: database.rs
sync_db_pools/codegen/tests/ui-fail-nightly/: database-syntax.rs  database-types.stderr
sync_db_pools/codegen/tests/ui-fail-stable/: database-types.rs  database-types.stderr
sync_db_pools/lib/: Cargo.toml
sync_db_pools/lib/src/: connection.rs  lib.rs  poolable.rs
sync_db_pools/lib/tests/: databases.rs
templates/: 404.html  basic.html  home.html  new.html.hbs  status.html.hbs  view.html  view.html.hbs
