[package]
name = "wlrs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
flexi_logger = "0.22.5"
futures = "0.3.21"
# Logging
log = "0.4.0"
# Misc
ordered-float = { version = "3.0", default-features = false, features = ["serde", "std"] }
regex-syntax = { version = "0.6.25" }
# Web
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
# Auth
rocket_auth = { path="./rocket_auth", features = ["skytable"] }
#rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
rocket_sync_db_pools = { path="./sync_db_pools/lib", features = ["sky"] }
# JSON
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
#DB
#sqlx = { version = "0.5", features = ["macros", "migrate", "sqlite"], default-features = false }
skytable = { version = "0.7.1", features = ["aio", "sync", "bb8", "r2d2"] }
# Time
time = { version = "0.3.9", features = ["std", "serde", "serde-human-readable"] }
tokio = "1.18.1"
tracing = { version = "0.1.35" }
tracing-core = { version = "0.1.26" }
## For workout IDs
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
r2d2 = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.hackerman.stash.dependencies]
regex-syntax = false
tracing-core = false
tracing = false
