[package]
name = "liftx"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
flexi_logger = "0.23"
rayon = "1"
# Logging
log = "0.4.17"
# Misc
ordered-float = { version = "3.0", default-features = false, features = ["serde", "std"] }
regex-syntax = { version = "0.6.27" }
# Web
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket-governor = "0.1.0-rc.4"
# Auth
rocket_auth = { path="./rocket_auth", features = ["sqlx-sqlite"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
#DB
sqlx = { version = "0.5", features = ["macros", "migrate", "sqlite"], default-features = false }
# Time
time = { version = "0.3.11", features = ["std", "serde", "serde-human-readable"] }
tokio = "1.20.0"
tracing = { version = "0.1.35" }
tracing-core = { version = "0.1.28" }
## For workout IDs
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.hackerman.stash.dependencies]
regex-syntax = false
tracing-core = false
tracing = false
